<resources>
    <string name="app_name">Rencanain</string>

    <!-- Register -->
    <string name="btnRegister">Daftar</string>

    <!-- Login -->
    <string name="btnMasuk">Masuk</string>
    <string name="labelEmail">Email</string>
    <string name="labelUname">Username</string>"
    <string name="labelPassword">Password</string>
    <string name="ETextMasukkanPassword">Masukkan password</string>
    <string name="btnContinueWithGoogle">Lanjutkan dengan Google</string>
    <string name="ETextEmail">Masukkan email</string>
    <string name="ETextUname">Masukkan username</string>

    <!-- Member List -->
    <string name="labelDaftarAnggota">Daftar Anggota</string>
    <string name="labelAnggota">Anggota (Jumlah)</string>

    <!-- My Schedule Detail -->
    <string name="dueDateLabel">Tenggat</string>
    <string name="labelScheduleStatus">Status</string>
    <string name="labelScheduleLevelPrioritas">Level Prioritas</string>
    <string name="labelDaftarJadwalku">Daftar Jadwalku</string>
    <string name="btnGoToAddSchedule">Tambah Jadwalku</string>
    <string name="labelForLabel">Label</string>
    <string name="labelDueDate">Tenggat</string>
    <string name="labelStatus">Status</string>
    <string name="labelPriorityLevel">Level Prioritas</string>

    <!-- Project List -->
    <string name="labelProjekku">Projekku</string>
    <string name="labelPenugasan">Penugasan</string>
    <string name="btnGoToAddProject">Tambah Projek</string>
    <string name="labelProjectDetail">Detail Proyek</string>

    <!-- Profile -->
    <string name="labelAkun">Akun</string>
    <string name="labelProfile">Profil</string>

    <!-- Home -->
    <string name="labelJadwalku">Jadwalku</string>

    <!-- Add Sub Task -->
    <string name="labelSubtugas">Subtugas</string>
    <string name="labelTugaskanKepada">Tugaskan Kepada</string>
    <string name="ETextNamaSubtugas">Masukkan nama subtugas</string>

    <!-- Add New Project -->
    <string name="labelProjectName">Nama Proyek</string>
    <string name="labelProjectDescription">Deskripsi Proyek</string>
    <string name="labelAddNewProject">Tambah proyek</string>

    <!-- Add New Schedule -->
    <string name="labelScheduleName">Jadwal saya</string>
    <string name="labelScheduleDescription">Deskripsi</string>
    <string name="labelAddNewSchedule">Tambah jadwal</string>

    <!-- Announcement -->
    <string name="labelAnnouncement">Pengumuman</string>

    <!-- Button Submit -->
    <string name="labelSubmit">Submit</string>
</resources>