<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".workspace.AddNewProjectActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/labelProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/labelAddNewProject"/>

    <TextView
        android:id="@+id/labelProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelProjectName"
        />

    <EditText
        android:id="@+id/ETProjectName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelProjectDescription"
        />

    <EditText
        android:id="@+id/ETProjectDesc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/labelStatusProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelStatus"
            />

        <Spinner
            android:id="@+id/spinnerStatusProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnSubmitAddProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSubmit" />


</LinearLayout>