<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Rencanain"
    android:layout_margin="20dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@+id/ETextEmail"
            app:layout_constraintEnd_toStartOf="@+id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="112dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelEmail" />

        <EditText
            android:id="@+id/ETextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/labelPassword"
            app:layout_constraintTop_toBottomOf="@+id/label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">
        <TextView
            android:id="@+id/labelUname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelUname" />

        <EditText
            android:id="@+id/ETextUname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/labelPassword"
            app:layout_constraintTop_toBottomOf="@+id/label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelPassword"
            app:layout_constraintBottom_toTopOf="@+id/ETextInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ETextInputPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnMasuk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/labelAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah memiliki akun?" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMasuk"
            android:paddingStart="5dp"
            android:autoLink=""
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>